Prepare the Display Link GUI for the Rich Label Editor™
Their pleads to actually release the update sooner have been defeated as my will to see this feature in 1.6 grew stronger...
Also, the invoker method names now start with 'call', the right (or maybe just Create-y) way!