@@ -13,6 +13,7 @@ import com.simibubi.create.content.trains.display.FlapDisplayBlockEntity;
 import com.simibubi.create.content.trains.display.FlapDisplayLayout;
 import com.simibubi.create.content.trains.display.FlapDisplaySection;
 import com.vladiscrafter.createidlx.mixin.accessor.create.NixieTubeDisplayTargetAccessor;
+import com.vladiscrafter.createidlx.mixin.accessor.create.SingleLineDisplaySourceAccessor;
 import com.vladiscrafter.createidlx.util.bridge.NixieTubeBlockEntityInternalCustomTextHolder;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.Font;
@@ -23,7 +24,6 @@ import net.minecraft.world.level.block.entity.SignBlockEntity;
 import org.apache.commons.lang3.tuple.Pair;
 import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.Pseudo;
-import org.spongepowered.asm.mixin.gen.Invoker;
 import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.Inject;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
@@ -38,16 +38,6 @@ import static com.vladiscrafter.createidlx.util.attachedLabel.AttachedLabelProce
 @Pseudo
 @Mixin(SingleLineDisplaySource.class)
 public abstract class SingleLineDisplaySourceMixin {
-    @SuppressWarnings("BooleanMethodIsAlwaysInverted")
-    @Invoker("allowsLabeling")
-    protected abstract boolean createidlx$invokeAllowsLabeling(DisplayLinkContext context);
-
-    @Invoker("provideLine")
-    protected abstract MutableComponent createidlx$invokeProvideLine(DisplayLinkContext context, DisplayTargetStats stats);
-
-    @Invoker("getFlapDisplayLayoutName")
-    protected abstract String createidlx$invokeGetFlapDisplayLayoutName(DisplayLinkContext context);
-
     @ModifyReturnValue(method = "provideText", at = @At("RETURN"))
     private List<MutableComponent> createidlx$placeholderifyProvideText(List<MutableComponent> originalValue,
                                                                         DisplayLinkContext context, DisplayTargetStats stats) {
@@ -55,7 +45,7 @@ public abstract class SingleLineDisplaySourceMixin {
             return ImmutableList.of(Component.literal(context.sourceConfig().getString("FinishLabel")));
 
         if (originalValue.isEmpty()) return originalValue;
-        if (!this.createidlx$invokeAllowsLabeling(context)) return originalValue;
+        if (!((SingleLineDisplaySourceAccessor) this).createidlx$callAllowsLabeling(context)) return originalValue;
 
         String label = context.sourceConfig().getString("Label");
         if (label.isEmpty()) {
@@ -70,7 +60,7 @@ public abstract class SingleLineDisplaySourceMixin {
 
         if (!shouldBeProcessed(label) && !hasOverridingFinishLabel(context)) return originalValue;
 
-        MutableComponent rawLine = this.createidlx$invokeProvideLine(context, stats);
+        MutableComponent rawLine = ((SingleLineDisplaySourceAccessor) this).createidlx$callProvideLine(context, stats);
         String information = (rawLine == SingleLineDisplaySource.EMPTY_LINE) ? "" : rawLine.getString();
 
         String processedLine = breakDownAndAssembleLabel(label, information);
@@ -118,9 +108,9 @@ public abstract class SingleLineDisplaySourceMixin {
 
         if (originalValue.isEmpty()) return originalValue;
 
-        if (!this.createidlx$invokeAllowsLabeling(context)) return originalValue;
+        if (!((SingleLineDisplaySourceAccessor) this).createidlx$callAllowsLabeling(context)) return originalValue;
 
-        String layoutKey = createidlx$invokeGetFlapDisplayLayoutName(context);
+        String layoutKey = ((SingleLineDisplaySourceAccessor) this).createidlx$callGetFlapDisplayLayoutName(context);
 
         String label = context.sourceConfig().getString("Label");
         if (label.isEmpty()) {
@@ -135,7 +125,7 @@ public abstract class SingleLineDisplaySourceMixin {
 
         if (!shouldBeProcessed(label) && !hasOverridingFinishLabel(context)) return originalValue;
 
-        MutableComponent rawLine = this.createidlx$invokeProvideLine(context, stats);
+        MutableComponent rawLine = ((SingleLineDisplaySourceAccessor) this).createidlx$callProvideLine(context, stats);
         String information = (rawLine == SingleLineDisplaySource.EMPTY_LINE) ? "" : rawLine.getString();
 
         BlockEntity be = context.getTargetBlockEntity();
@@ -162,9 +152,9 @@ public abstract class SingleLineDisplaySourceMixin {
     @Inject(method = "loadFlapDisplayLayout", at = @At("HEAD"), cancellable = true)
     private void createidlx$placeholderifyLoadFlapDisplayLayout(DisplayLinkContext context, FlapDisplayBlockEntity flapDisplay,
                                                                 FlapDisplayLayout layout, CallbackInfo ci) {
-        if (!this.createidlx$invokeAllowsLabeling(context)) return;
+        if (!((SingleLineDisplaySourceAccessor) this).createidlx$callAllowsLabeling(context)) return;
 
-        String layoutKey = createidlx$invokeGetFlapDisplayLayoutName(context);
+        String layoutKey = ((SingleLineDisplaySourceAccessor) this).createidlx$callGetFlapDisplayLayoutName(context);
 
         String label = context.sourceConfig().getString("Label");
         if (label.isEmpty()) {
@@ -180,7 +170,7 @@ public abstract class SingleLineDisplaySourceMixin {
         if (!shouldBeProcessed(label) && (!hasOverridingFinishLabel(context))) return;
 
         DisplayTargetStats targetStats = context.blockEntity().activeTarget.provideStats(context);
-        MutableComponent rawLine = createidlx$invokeProvideLine(context, targetStats);
+        MutableComponent rawLine = ((SingleLineDisplaySourceAccessor) this).createidlx$callProvideLine(context, targetStats);
         String information = rawLine == SingleLineDisplaySource.EMPTY_LINE ? "" : rawLine.getString();
 
         int maxLength = flapDisplay.getMaxCharCount();
@@ -191,7 +181,7 @@ public abstract class SingleLineDisplaySourceMixin {
         ArrayList<FlapDisplaySection> unclampedSections = breakDownAndAssembleLabelAsSectionList(label, information, layoutKey,
                 maxValueWidth, valueWidthMod);
 
-        String layoutName = buildLayoutSignature(label, layoutKey, Math.max(1, Math.min(information.length(), maxLength)), context);
+        String layoutName = buildLayoutSignature(label, layoutKey, Math.clamp(information.length(), 1, maxLength), context);
 
         Pair<ArrayList<FlapDisplaySection>, Float> sectionsClampResult
                 = clampSections(unclampedSections, maxValueWidth, true, markTruncationWithEllipsis(context));
